# Test_cicd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: github-actions-syntax.md  github-cicd-guide.md
src/cicd_demo/: __init__.py  calculator.py  cli.py
tests/: test_calculator.py  test_cli.py
