[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cicd-demo"
version = "0.1.0"
description = "A small Python project for learning GitHub CI/CD."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]
release = [
    "build>=1.2.0",
    "pyinstaller>=6.0",
]

[project.scripts]
cicd-demo = "cicd_demo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
